css/puzzle.css
html,body {
	font-size: 16px;
	margin:0;
	padding: 0;
	overflow-x: hidden;
	font-family: 'PT Sans', sans-serif;
}



.container {
	display: block;
    /*position: absolute;*/
    /*right: 2vw;*/
     width: 100vw;
    height: 100vh;
    background:url(../img/contacts.png) no-repeat;
    background-position: center;
    background-size: cover;
}

.contacts-wrapper {
	float: left;
	display: flex;
	height: 100vh;
	flex-direction: column;
	justify-content: center;
	text-align: center;
	width: 40vw;
	margin: 0 5vw;
}

.puzzle-wrapper {
	float:right;
	height:100vh;
	width:50vw;
}

.scale{

	transform-origin: 50% 50%;
	-webkit-transform-origin: 50% 50%;

}

#Sec { transition: all .4s ease-in-out;z-index: 0;}
#Sec:hover { transform: scale(1.1)}

#Sec_2 { transition: all .4s ease-in-out; z-index: 0;}
#Sec_2:hover { transform: scale(1.1); }

#Sec_3 { transition: all .4s ease-in-out; z-index: 0;}
#Sec_3:hover { transform: scale(1.1); }

#Sec_4 { transition: all .4s ease-in-out; z-index: 0;}
#Sec_4:hover { transform: scale(1.1); }

#WebMaster { transition: all .4s ease-in-out; z-index: 0;}
#WebMaster:hover { transform: scale(1.1); }

#Registration { transition: all .4s ease-in-out; z-index: 0;}
#Registration:hover { transform: scale(1.1); }

#Spons { transition: all .4s ease-in-out; z-index: 0;}
#Spons:hover { transform: scale(1.1); }

#RecnAcc { transition: all .4s ease-in-out; z-index: 0;}
#RecnAcc:hover { transform: scale(1.1); }

#Events { transition: all .4s ease-in-out; z-index: 0;}
#Events:hover { transform: scale(1.1); }

.up{
	transition: all .4s ease-in-out;
	transform: translateY(-20px);
}
.down{
	transition: all .4s ease-in-out;
	transform: translateY(20px);
}
.right{
	transition: all .4s ease-in-out;
	transform: translateX(20px);
}
.left{
	transition: all .4s ease-in-out;
	transform: translateX(-20px);
}

.conHead {
	font-size: 2.7em;
	font-weight: bold;
	margin: 0.4em 0;
}

.conText {
	font-size: 1.3em;
}

@media only screen and (max-width: 600px) {
	.container {
		display: flex;
		flex-direction: column;
		justify-content: middle;
	}
	.puzzle-wrapper {
		height: inherit;
    	width: initial;
    	position: absolute;
    	bottom: 20px;
    	margin: 0 auto;
    	width:100vw;
    	max-height: 70vh;
	}
	.contacts-wrapper {
		margin-top:20px;
		display: block;
    	height: initial;
    	width: initial;
	}
	.conHead{
		font-size: 1.8em;
	}
	.conText {
		font-size: 1em;
	}
}

.baxter {
	width: 100vw;
	height: 100vh;
	/*background: url('../img/baxter_bg.svg');
	background-size: 100%;
	background-position: center;*/
}

.baxter img {
	width: 100vw;
	height: 100vh;
}

.bax-wrapper {
	position: absolute;
	color: white;
	top:0;
	width: 100vw;
}

.just_align {
	float: left;
}

.baxCont {
	position: absolute;
    color: white;
    top: 0;
    right: 0;
    width: 40vw;
    margin: 0 5vw;
    display: flex;
    flex-direction: column;
    justify-content: center;
    height: 100vh;
}


.torch .baxCont{
	width:50vw;
}
.baxCover{
	background: rgba(255, 255, 255, 0.8) none repeat scroll 0% 0%;
	text-align: center;
	border-radius: 10px;
	color: #126c9e;
	padding: 30px;

}

@media screen and (max-width:600px) {
	.baxCover{
		padding: 10px;
	}
	.torch .baxCont{
		width: 60vw;
	}
}

.baxCover .baxText{
	max-height: 50vh;
}

.baxHead {
	margin-bottom: 15px;
	font-size: 2.7em;
	font-weight: bold;
}

.baxText {
	max-height: 50vh;
	overflow-y: auto;
	font-size: 1.3em;
}

@media only screen and (max-width: 600px) {
	.baxHead {
		font-size: 1.5em;
	}
	.baxText {
		font-size: 1em;
	}
}



.torch {
  width: 100vw;
  height: 100vh;
  background-color: #126C9E;
  background-image: url('../img/torchbg.svg');
  background-size: auto 95%;
  background-repeat: no-repeat;
  background-position: left bottom;
  position: fixed;
}

@media screen and (max-width:900px) {
	.torch{
		background-position: bottom;
	}
}


.extraEvents{
	width: 100vw;
	min-height: 100vh;
  background-image: url('../img/corkboard.svg');
  background-size: 100% 100%;
  background-repeat: no-repeat;
  background-position: center;
	overflow: hidden;
	position: absolute;
	right: 100vw;
	z-index: 2;
}


.eventsWrap{
position: relative;
padding: 30px 50px;
}

.eventsWrap tspan{
	cursor: pointer;
}


.eventsWrap svg{
	position: relative;
}

.centerEvent{
	position: relative;
	margin: auto;
}

.profShow{
	width: 100vw;
  height: 100vh;
  background-image: url('../img/lagoriBack.jpg');
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center;
  position: fixed;
}


.profShow .overlay{
	width: 100vw;
  height: 100vh;
	z-index: -1;
	background: rgba(0,0,0,0.5);
	position: absolute;
	top:0
	left:0;
}

.profShow .profLogo{
	position: relative;
	top:30px;
	left: 30px;
}

.profShow .profLogo img{
	max-width: 75%;
}


@font-face {
	font-family: 'Web Serveroff';
	src: url('../Web Serveroff.ttf');
}

.sideBar{
	position: relative;
	top:250px;
	overflow: hidden;
	font-family: 'Web Serveroff';
}




.sideBar p{
	float: left;
	font-size: 1.5em;
	background-color: #0a0a0a;
	padding-right: 14px;
padding-top: 14px;
padding-bottom: 14px;
text-align: right;
padding-left: 55px;
	margin: 1px 0 0;
	color: #fffbf9;
	clear: both;
}
.sideBar h2{
	float: left;
	margin: 0;
	background-color: #39bc27;
	padding: 5px 20px;
	color: #fffbf9;
	font-size: 2.7em;
	clear: both;
	text-align: right;
padding-right: 14px;
padding-left: 95px;
padding-top: 14px;
}


@media screen and (max-width:600px) {
	.sideBar p{
		font-size: 1.2em;
	}

	.sideBar h2{
		font-size: 1.6em;
	}
}



.profShow .baxCont{
	width: 70vw;
	/*justify-content: end;*/
	margin: 0;
	font-family: 'Web Serveroff';

}

.profShow .baxCover{
	background-color: rgba(10,10,10,0.9);
	color: #fffbf9;
	top: 13vh;
	position: relative;
	border-radius: 3px;
	text-align: left;
	font-size: 1.3em !important;
}

@media only screen and (max-width: 600px) {
	.profShow .baxText {
		font-size: 1.1em;
	}

	.profShow .profLogo img{
		left: calc(50% - 70px);
		position: relative;
	}

	.sideBar{
		top: 50px;
	}
}

@media only screen and (max-width: 1000px) {

	.sideBar h2{
		padding-left: 77px;
		font-size: 1.7em;
	}

	.sideBar p{
		padding-left: 22px;
		font-size: 1.2em;
	}
}

/*
.eventData{
	position: absolute;
	top:0;
	left: 0;
	width: 100vw;
	height: 100vh;
	display: flex;
	justify-content: center;
	align-items: center;
}

.overlay{
	position: absolute;
	top:0;
	left: 0;
	width: 100vw;
	height: 100vh;
	background: rgba(0,0,0,0.6);
}

.eventData .wrap{
	width: 50vw;
	left:25vw;
	height: 50vh;
	background: url('../img/note.svg');
	background-size: cover;
}*/





.arrowHead{
  position: absolute;
  z-index: 2;
  right: 54px;
	top:54px
}

.arrowHead img{
	cursor: pointer;
	
	width:26px;
	background: white;
	border-radius: 50%;
	padding: 14px;

}

